[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0"
tokio-tungstenite = "*"
hashbrown = "0.12.0"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "0.8", features = ["v4"] }
timer = "0.2.0"
chrono = "0.4"
rhai = "1.4.1"
lazy_static = "1.4.0"
rand = "0.8.4"
deadqueue = "0.2.0"
async-trait = "0.1.42"